# DesignPatterns

./: .gitignore
Builder/: Builder.cpp  Vehicle.hpp  builder
C++/: .gitignore
C++/GameOfLife/: CMakeCache.txt  CMakeLists.txt  GameOfLife  game.cpp
C++/GameOfLife/Headers/: GameOfLife.h  GameOfLife.hpp  Matrix.h  Matrix.hpp
C++/GameOfLife/Libs/: MatrixOperation.cpp
Prototype/: Protorype.cpp
Singleton/: singleton.cpp  threadSafeSingleton.cpp
